--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,31 @@
-# Dependencies
 node_modules/
-vendor/
-*.egg-info/
 dist/
 build/
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# IDE and editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
+.vite/
 
 # Logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# OS files
+# Env files
+.env
+.env.*
+.env.local
+
+# OS/Editor
+.DS_Store
 Thumbs.db
+.idea/
+.vscode/
+*.swp
+*.swo
 
-# Build outputs
-*.pyc
-__pycache__/
-*.class
-*.o
-*.so
-*.dll
-*.exe
-
-# Test coverage
+# Coverage
 coverage/
 .coverage
 htmlcov/
-.pytest_cache/
 
-# Temporary files
-tmp/
-temp/
-*.tmp
+# Archives
+*.zip
